--- a/README
+++ b/README
@@ -1,2 +1,7 @@
-You can add `.php` files to this directory to load classes and functions defined
-in them at runtime.
+## Usage
+Step1. Put these two files to path phabricator/src/extensions/
+Step2. Change the configration of Phabricator by steps: Configure Settings ==> Account ==> Account Settings ==> Translation
+
+## Notice
+This language pack just translate parts of words of Phabricator,and maybe out of date since the version of Phabricator.
+If this language pack can't satisify your needs, you can add more translation items in the file 'PhabricatorCNChineseTranslation.php'
